change in build.xml

--- a/src/build.xml
+++ b/src/build.xml
@@ -1,6 +1,6 @@
 <project name="MyProject" default="dist" basedir=".">
     <description>
-        simple example build file by Kaushal
+        simple example build file by Kaushal Kishore
     </description>
   <!-- set global properties for this build -->
   <property name="src" location="src"/>
